# CmakeLearn

./: .gitignore  Notes.md  Readme.md
code/multi/: CMakeLists.txt
code/multi-plus/: CMakeLists.txt
code/multi-plus-plus/calc/: CMakeLists.txt  add.cpp  divide.cpp
code/multi-plus-plus/sort/: CMakeLists.txt  select.cpp
code/multi-plus-plus/test/: sort.cpp
code/multi-plus/calc/: CMakeLists.txt
code/multi-plus/include/: calc.h
code/multi-plus/sort/: CMakeLists.txt  insert.cpp
code/multi/include/: sort.h
code/multi/sort/: CMakeLists.txt  insert.cpp
code/multi/test1/: CMakeLists.txt  calc.cpp
code/multi/test2/: CMakeLists.txt
code/v1/c1/: CMakeLists.txt  main.cpp
code/v1/c2/: CMakeLists.txt
code/v1/c3/: CMakeLists.txt
code/v1/c4/: CMakeLists.txt
code/v1/c4/src/: div.cpp
code/v2/: CMakeLists.txt
code/v2/c1/: CMakeLists.txt
code/v2/include/: head.h
code/v3/: CMakeLists.txt
code/v4/: CMakeLists.txt
code/v5/: CMakeLists.txt
code/v5/src/: add.cpp
code/v6/: CMakeLists.txt  test.cpp
learnLogger/: 1. a simple CMakeLists.md  2. set.md  a simple CMakeLists.md
